@@ -14,14 +14,10 @@ class XMIExportAction(Action):
         else:
             filename = 'model.xmi'
 
-        if gtk.pygtk_version < (2, 4, 0):
-            filesel = gtk.FileSelection('Export model to XMI file')
-            filesel.set_filename(filename)
-        else:
-            filesel = gtk.FileChooserDialog(title='Export model to XMI file',
-                                            action=gtk.FILE_CHOOSER_ACTION_SAVE,
-                                            buttons=(gtk.STOCK_CANCEL,gtk.RESPONSE_CANCEL,gtk.STOCK_SAVE,gtk.RESPONSE_OK))
-            filesel.set_current_name(filename)
+        filesel = gtk.FileChooserDialog(title='Export model to XMI file',
+                                        action=gtk.FILE_CHOOSER_ACTION_SAVE,
+                                        buttons=(gtk.STOCK_CANCEL,gtk.RESPONSE_CANCEL,gtk.STOCK_SAVE,gtk.RESPONSE_OK))
+        filesel.set_current_name(filename)
 
         response = filesel.run()
         filename = filesel.get_filename()
