@@ -1,3 +1,8 @@
+2004-12-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/diagram/implementation.py: removed recursive import of
+	InterfaceItem.
+
 2004-12-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 	
 	* gaphor/diagram/association.py (unlink): explicitly unlink()
